# IterativeRotationsAssignments

./: meson.build  pixi.toml
interface/: iralib_interf.h
src/: .f2py_f2cmap  irasort-f2pywrappers2.f90  irasortmodule.c  library_sofi.f90  try_run.py
